--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 <body>
     <!-- navbar -->
-    <nav class="navbar sticky-top navbar-expand-lg shadow p-3 navbar-light bg-light fs-4">
+    <nav class="navbar sticky-top navbar-expand-lg shadow p-3 navbar-light bg-white fs-4">
         <div class="container">
-            <a href="#" class="navbar-brand fs-4">yisraelk1</a>
+            <a href="#" class="navbar-brand">yisraelk1</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -35,12 +35,15 @@
         </div>
     </nav>
     <!-- shwcase -->
-    <section class="p-5 text-center">
-        <div class="container">
-            <h2 class="text-primary">yisraelk1</h2>
-            <hr class="bg-primary border-4 border-top border-primary">
-            <h3 class="text-primary">בנית אתרים זה אני</h3>
+    <section class="p-5 text-center bg-image" style="background-image: url('imges/blur-cellphone-close-up-196644.jpg');height: 100vh;">
+        <div class="a">
+            <div class="container">
+                <h2 class="text-primary fw-bold">yisraelk1</h2>
+                <hr class="bg-primary border-4 border-top border-primary">
+                <h3 class="text-primary fw-bold">בניית אתרים זה אני</h3>
+            </div>
         </div>
+        
     </section>
 
     <script src="js/bootstrap.js"></script>
