--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </nav>
     <!-- shwcase -->
-    <section class="p-5 text-center bg-image" style="background-image: url('imges/blur-cellphone-close-up-196644.jpg');height: 100vh;">
+    <section class="p-5 text-center bg-image">
         <div class="a">
             <div class="container">
                 <h2 class="text-primary fw-bold">yisraelk1</h2>
