--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </nav>
     <!-- shwcase -->
-    <section class="p-5 text-center bg-image">
+    <section class="p-5 text-center bg-image heading">
         <div class="a">
             <div class="container">
                 <h2 class="text-primary fw-bold">yisraelk1</h2>
@@ -45,6 +45,12 @@
         </div>
         
     </section>
+    <article class="p-5 text-center main">
+        <div class="container">
+            <h2 class="fw-bold">יכולות</h2>
+            <p>חריצות </p>
+        </div>
+    </article>
 
     <script src="js/bootstrap.js"></script>
     <script src="js/app.js"></script>
