--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
     </nav>
     <!-- shwcase -->
     <section class="p-5 text-center bg-image heading">
-        <div class="a">
-            <div class="container">
+        <div class="container">
+            <div class="box-heading">
                 <h2 class="text-primary fw-bold">yisraelk1</h2>
                 <hr class="bg-primary border-4 border-top border-primary">
                 <h3 class="text-primary fw-bold">בניית אתרים זה אני</h3>
@@ -45,10 +45,41 @@
         </div>
         
     </section>
-    <article class="p-5 text-center main">
+    <article class="p-5 main">
         <div class="container">
-            <h2 class="fw-bold">יכולות</h2>
-            <p>חריצות </p>
+            <h2 class="fw-bold text-center">יכולות</h2>
+            <div class="card-deck">
+                <div class="card">
+                  <img class="card-img-top" src="imges/bg.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                  </div>
+                </div>
+                <div class="card">
+                  <img class="card-img-top" src="imges/bg.jpg" alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                  </div>
+                </div>
+                <div class="card">
+                  <img class="card-img-top" src="..." alt="Card image cap">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                  </div>
+                  <div class="card-footer">
+                    <small class="text-muted">Last updated 3 mins ago</small>
+                  </div>
+                </div>
+              </div>
         </div>
     </article>
 
