--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <!-- navbar -->
     <nav class="navbar sticky-top navbar-expand-lg shadow p-3 navbar-light bg-white fs-4">
         <div class="container">
-            <a href="#" class="navbar-brand">yisraelk1</a>
+            
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navmenu">
                 <span class="navbar-toggler-icon"></span>
             </button>
+            <a href="#" class="navbar-brand">yisraelk1</a>
             <div class="collapse navbar-collapse" id="navmenu">
-                <ul class="navbar-nav me-auto">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">דף הבית</a>
                     </li>
@@ -35,15 +36,27 @@
         </div>
     </nav>
     <!-- shwcase -->
-    <section class="p-5 text-center bg-image">
-        <div class="a">
-            <div class="container">
-                <h2 class="text-primary fw-bold">yisraelk1</h2>
+    <section class="heading p-5 text-center bg-image">
+        <div class="container">
+            <div class="box-header">
+                <h2 class="text-primary fw-bold display-2">yisraelk1</h2>
                 <hr class="bg-primary border-4 border-top border-primary">
-                <h3 class="text-primary fw-bold">בניית אתרים זה אני</h3>
+                <h3 class="text-primary fw-bold display-5">בניית אתרים זה אני</h3>
             </div>
         </div>
-        
+    </section>
+    <section class="main bg-image text-white">
+        <div class="container">
+            <div class="main-box bg-image">
+                <h2 class="fw-bold display-4">השכלה</h2>
+                <hr class="border-2 border-top w-25">
+                <p class="fw-bold h2">בוגר קורס לבניית אתרים מטעם מכללת Frog,<br>
+                    ומכללת HackerU,<br>
+                    עם ידע נרחב ושליטה ב-<br>
+                    HTML , CSS, JavaScript, JQuery.<br>
+                    בעל ראש גדול, מוטיבציה גבוהה ויחסי אנוש טובים.</p>
+            </div>
+        </div>
     </section>
 
     <script src="js/bootstrap.js"></script>
