--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <title>my website</title>
@@ -36,25 +33,97 @@
         </div>
     </nav>
     <!-- shwcase -->
-    <section class="heading p-5 text-center bg-image">
+    <section class="heading text-center">
         <div class="container">
             <div class="box-header">
-                <h2 class="text-primary fw-bold display-2">yisraelk1</h2>
-                <hr class="bg-primary border-4 border-top border-primary">
-                <h3 class="text-primary fw-bold display-5">בניית אתרים זה אני</h3>
+                <h2 class="text-primary">yisraelk1</h2>
+                <hr>
+                <h3 class="text-primary">בניית אתרים זה אני</h3>
             </div>
         </div>
+        <div class="waves-svg-top">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none">
+                <path class="elementor-shape-fill" opacity="0.33" d="M473,67.3c-203.9,88.3-263.1-34-320.3,0C66,119.1,0,59.7,0,59.7V0h1000v59.7 c0,0-62.1,26.1-94.9,29.3c-32.8,3.3-62.8-12.3-75.8-22.1C806,49.6,745.3,8.7,694.9,4.7S492.4,59,473,67.3z"></path>
+                <path class="elementor-shape-fill" opacity="0.66" d="M734,67.3c-45.5,0-77.2-23.2-129.1-39.1c-28.6-8.7-150.3-10.1-254,39.1 s-91.7-34.4-149.2,0C115.7,118.3,0,39.8,0,39.8V0h1000v36.5c0,0-28.2-18.5-92.1-18.5C810.2,18.1,775.7,67.3,734,67.3z"></path>
+                <path class="elementor-shape-fill" d="M766.1,28.9c-200-57.5-266,65.5-395.1,19.5C242,1.8,242,5.4,184.8,20.6C128,35.8,132.3,44.9,89.9,52.5C28.6,63.7,0,0,0,0 h1000c0,0-9.9,40.9-83.6,48.1S829.6,47,766.1,28.9z"></path>
+            </svg>
+        </div>
     </section>
-    <section class="main bg-image text-white">
+    
+    <section class="main text-white">
         <div class="container">
-            <div class="main-box bg-image">
-                <h2 class="fw-bold display-4">השכלה</h2>
-                <hr class="border-2 border-top w-25">
-                <p class="fw-bold h2">בוגר קורס לבניית אתרים מטעם מכללת Frog,<br>
-                    ומכללת HackerU,<br>
+            <div class="main-box">
+                <h2>השכלה</h2>
+                <hr>
+                <p>בוגר קורס לבניית אתרים מטעם,<br>
+                     מכללת Frog ומכלל HackerU,<br>
                     עם ידע נרחב ושליטה ב-<br>
                     HTML , CSS, JavaScript, JQuery.<br>
-                    בעל ראש גדול, מוטיבציה גבוהה ויחסי אנוש טובים.</p>
+                    בעל ראש גדול, מוטיבציה גבוהה<br>
+                    ויחסי אנוש טובים.</p>
+            </div>
+        </div>
+        
+    </section>
+    <section class="knowledge">
+        <div class="waves-svg">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 100" preserveAspectRatio="none">
+                <path class="elementor-shape-fill" opacity="0.33" d="M473,67.3c-203.9,88.3-263.1-34-320.3,0C66,119.1,0,59.7,0,59.7V0h1000v59.7 c0,0-62.1,26.1-94.9,29.3c-32.8,3.3-62.8-12.3-75.8-22.1C806,49.6,745.3,8.7,694.9,4.7S492.4,59,473,67.3z"></path>
+                <path class="elementor-shape-fill" opacity="0.66" d="M734,67.3c-45.5,0-77.2-23.2-129.1-39.1c-28.6-8.7-150.3-10.1-254,39.1 s-91.7-34.4-149.2,0C115.7,118.3,0,39.8,0,39.8V0h1000v36.5c0,0-28.2-18.5-92.1-18.5C810.2,18.1,775.7,67.3,734,67.3z"></path>
+                <path class="elementor-shape-fill" d="M766.1,28.9c-200-57.5-266,65.5-395.1,19.5C242,1.8,242,5.4,184.8,20.6C128,35.8,132.3,44.9,89.9,52.5C28.6,63.7,0,0,0,0 h1000c0,0-9.9,40.9-83.6,48.1S829.6,47,766.1,28.9z"></path>
+            </svg>
+        </div>
+        <div class="container">
+            <h2>ידע נרחב</h2>
+            <div class="row row-cols-1 row-cols-md-2 g-4">
+                <div class="col">
+                    <div class="card p-3 text-primary bg-white text-center h-100">
+                        <div class="row">
+                            <i class="bi bi-terminal px-3"></i>                        
+                            <div class="card-body">
+                                <h5 class="card-title">ידע</h5>
+                                <p class="card-text">הכשרה מקיפה על HTML בכלל ו-HTML5 בפרט.
+                                    תיכנות בעולם ה-WEB והכרות עם CSS.</p>
+                            </div>                            
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card p-3 text-primary bg-white text-center h-100">
+                        <div class="row">
+                            <i class="bi bi-wrench"></i>                
+                            <div class="card-body">
+                                <h5 class="card-title">בניה</h5>
+                                <p class="card-text">ידע בבניית אתרים ב-WordPress.
+                                תוך שימוש ב-HTML וקודים קצרים ב-PHP. </p>
+                            </div>                            
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card p-3 text-primary bg-white text-center h-100">
+                        <div class="row">
+                            <i class="bi bi-palette"></i>          
+                            <div class="card-body">
+                                <h5 class="card-title">עיצוב</h5>
+                                <p class="card-text">איפיון ועיצוב האתר על פי דרישת לקוח.
+                                    באפיון אתרים UX/IU. </p>
+                            </div>                            
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card p-3 text-primary bg-white text-center h-100">
+                        <div class="row">
+                            <i class="bi bi-columns"></i>                     
+                            <div class="card-body">
+                                <h5 class="card-title">רספונסיבי</h5>
+                                <p class="card-text">אופטימיזציה לאתרי אינטרנט
+                                    לתמיכה במובייל לכול הגדלים.</p>
+                            </div>                            
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
