--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a href="#" class="navbar-brand">yisraelk1</a>
+        <a href="https://yisraelk1.netlify.app" class="navbar-brand">yisraelk1</a>
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav">
             <li class="nav-item">
@@ -41,10 +41,10 @@
               >
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">ידע נרחב</a>
+              <a href="#container" class="nav-link">ידע נרחב</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">בלוג</a>
+              <a href="#Portfolio" class="nav-link">תיק עבודות</a>
             </li>
           </ul>
         </div>
@@ -122,7 +122,7 @@
           ></path>
         </svg>
       </div>
-      <div class="container">
+      <div id="container" class="container">
         <h2>ידע נרחב</h2>
         <div class="row row-cols-1 row-cols-md-2 g-4">
           <div class="col">
@@ -204,65 +204,53 @@
         </div>
       </div>
     </section>
-    <div class="Portfolio">
+
+
+
+    <div id="Portfolio" class="Portfolio">
       <div class="container">
         <h2>תיק עבודות</h2>
 
+        
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="..." />
+            <div class="card h-100">
+              <img src="imges/אינדיגו.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">אינדיגו</h5>
                 <p class="card-text">
-                  This is a longer card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
+                  משקה אנרגיה בריא
                 </p>
+                <a href="https://life4good.com/" class="btn btn-primary">לאתר אינדיגו</a>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">אתר מוכן</small>
               </div>
             </div>
           </div>
           <div class="col">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="..." />
+            <div class="card h-100">
+              <img src="imges/bowbella4u.png" class="card-img-top" alt="..." />
               <div class="card-body">
-                <h5 class="card-title">Card title</h5>
+                <h5 class="card-title">בובלה</h5>
                 <p class="card-text">
-                  This is a longer card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
+                  ביגוד לתינוקות עם שיק בייבוא בלעדי
                 </p>
+                <a href="https://bowbella4u.com" class="btn btn-primary">לאתר בובלה</a>
+              </div>
+              <div class="card-footer">
+                <small class="text-muted">בשלבי הקמה</small>
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  This is a longer card with supporting text below as a natural
-                  lead-in to additional content.
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card">
-              <img src="..." class="card-img-top" alt="..." />
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">
-                  This is a longer card with supporting text below as a natural
-                  lead-in to additional content. This content is a little bit
-                  longer.
-                </p>
-              </div>
-            </div>
-          </div>
+          
         </div>
       </div>
     </div>
+
+    <footer>
+      Copyright 2022 – עוצב על ידי ישראל
+    </footer>
 
     <script src="js/bootstrap.js"></script>
     <script src="js/app.js"></script>
